--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,1 +1,13 @@
 @import 'variables';
+
+html,
+body {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+
+body {
+  margin: 0;
+  overflow: hidden;
+}
